--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
     "api/*.py": { "maxDuration": 300, "memory": 1024 }
-  }
+  },
+  "rewrites": [
+    { "source": "/run", "destination": "/api/run" }
+  ]
 }
