--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "functions": { "api/*.py": { "maxDuration": 300, "memory": 1024 } },
-  "rewrites": [{ "source": "/run", "destination": "/api/run" }]
+  "functions": {
+    "api/*.py": { "maxDuration": 300, "memory": 1024 }
+  }
 }
