--- a/vercel.json
+++ b/vercel.json
@@ -3,22 +3,15 @@
 	"github":   {
 		"enabled": false
 	},
-	"functions": {
-		"vercel/api/**/*.py": {
-		"runtime": "@vercel/python@3.9",
-		"maxDuration": 60
-		}
-	},
-
 	"env": {
 		"PYTHONDONTWRITEBYTECODE": "1"
 	},
-
 	"builds":   [
 		{
 		"src": "vercel/api/*/handler.py",
 		"use": "@vercel/python",
 		"config": {
+			"runtime": "python3.9",
 			"includeFiles": [
 			"_app/**",
 			"_helper/**",
