--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "api/*.py": { "maxDuration": 300, "memory": 1024 }
+    "api/*.py": {
+      "maxDuration": 300,
+      "memory": 1024,
+      "includeFiles": "pipeline.py"
+    }
   }
 }
