--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
 				"_app/**",
 				"_helper/**",
 				"vercel/api/bigquery/pipeline.py",
-				"requirements.txt"
+				"vercel/api/bigquery/requirements.txt"
 				],
 				"excludeFiles": ["**/__pycache__/**", "**/*.pyc", "**/*.pyo"]
 
