--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,11 @@
 				"includeFiles": [
 				"_app/**",
 				"_helper/**",
-				"vercel/api/bigquery/pipeline.py",
-				"vercel/api/bigquery/requirements.txt"
+				"vercel/api/brand-sentiment/pipeline.py",
+          		"vercel/api/brand-sentiment/requirements.txt"
 				],
-	        "excludeFiles": ["**/__pycache__/**", "**/*.pyc", "**/*.pyo"],
-	        "pipFlags": ["--no-compile", "--no-cache-dir"]
+				"excludeFiles": ["**/__pycache__/**", "**/*.pyc", "**/*.pyo"]
+
 			}
 		},
 		{
