--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
 	"github":   {
 		"enabled": false
 	},
+	"env": {
+    	"PYTHONDONTWRITEBYTECODE": "1"
+  	},
 	"builds":   [		
 		{
 			"src": "vercel/api/*/handler.py",
@@ -13,9 +16,7 @@
 				"_helper/**",
 				"vercel/api/brand-sentiment/pipeline.py",
           		"vercel/api/brand-sentiment/requirements.txt"
-				],
-				"excludeFiles": ["**/__pycache__/**", "**/*.pyc", "**/*.pyo"]
-
+				]
 			}
 		},
 		{
