--- a/vercel.json
+++ b/vercel.json
@@ -3,20 +3,24 @@
 	"github":   {
 		"enabled": false
 	},
-	"env": {
-    	"PYTHONDONTWRITEBYTECODE": "1"
-  	},
+	"build": {
+		"env": {
+		"PYTHONDONTWRITEBYTECODE": "1"
+		}
+	},
 	"builds":   [		
 		{
-			"src": "vercel/api/*/handler.py",
-			"use": "@vercel/python",
-			"config": {
-				"includeFiles": [
-				"_app/**",
-				"_helper/**",
-				"vercel/api/brand-sentiment/pipeline.py"
-				]
-			}
+		"src": "vercel/api/*/handler.py",
+		"use": "@vercel/python",
+		"config": {
+			"pythonVersion": "3.11",
+			"includeFiles": [
+			"_app/**",
+			"_helper/**",
+			"vercel/api/brand-sentiment/pipeline.py",
+			"vercel/api/brand-sentiment/requirements.txt"
+			]
+		}
 		},
 		{
 			"src": "vercel/api/*/handler.py",
