--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,47 @@
-__pycache__/
-*.pyc
+#phpstorm
+/.idea
+
+#aws
+.serverless
+.aws-sam
+
+#environment
 .env
-.venv
-.DS_Store
+.env.*
+!.env.example
+
+#prisma
+/_prisma/.env
+
+#vercel
+.next
+.vercel
+/vercel/tailwind/generated/*.css
+
+#esbuild
+.esbuild
+
+#package
+node_modules
+jspm_packages
+
+#sentry
+.sentryclirc
+
+#yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
+#webpack
+.webpack
+.webpackCache
+.turbo
+
+# Python cache
+__pycache__/
+*.py[cod]
