--- a/vercel.json
+++ b/vercel.json
@@ -1,77 +1,68 @@
 {
-  "version": 2,
-  "public": false,
-  "regions": ["lhr1"],
-  "github": { "enabled": false },
-
-  "builds": [
-    {
-      "src": "vercel/api/brand-sentiment/handler.py",
-      "use": "@vercel/python",
-      "config": {
-        "pythonVersion": "3.11",
-        "includeFiles": [
-          "_app/**",
-          "_helper/**",
-          "vercel/api/brand-sentiment/pipeline.py",
-          "vercel/api/brand-sentiment/requirements.txt"
-        ]
-      }
-    },
-    {
-      "src": "vercel/api/*/handler.py",
-      "use": "@vercel/python",
-      "config": {
-        "pythonVersion": "3.11",
-        "includeFiles": [
-          "_app/**",
-          "_helper/**"
-        ]
-      }
-    },
-    {
-      "src": "vercel/api/generate-copy/facebook/handler.py",
-      "use": "@vercel/python",
-      "config": {
-        "pythonVersion": "3.11",
-        "includeFiles": [
-          "_app/**",
-          "_helper/**",
-          "vercel/api/generate-copy/resources/templates/template_ad_copy.xlsx",
-          "vercel/api/generate-copy/resources/image/8ms.png"
-        ]
-      }
-    },
-    {
-      "src": "vercel/api/generate-copy/google/handler.py",
-      "use": "@vercel/python",
-      "config": {
-        "pythonVersion": "3.11",
-        "includeFiles": [
-          "_app/**",
-          "_helper/**",
-          "vercel/api/generate-copy/resources/templates/template_ad_copy.xlsx",
-          "vercel/api/generate-copy/resources/image/8ms.png"
-        ]
-      }
-    },
-    {
-      "src": "vercel/api/generate-copy/seo/handler.py",
-      "use": "@vercel/python",
-      "config": {
-        "pythonVersion": "3.11",
-        "includeFiles": [
-          "_app/**",
-          "_helper/**",
-          "vercel/api/generate-copy/resources/template_seo.xlsx",
-          "vercel/api/generate-copy/resources/image/8ms.png"
-        ]
-      }
-    }
-  ],
-
-  "routes": [
-    { "src": "/api/([^/]+)/?$", "dest": "/vercel/api/$1/handler.py" },
-    { "src": "/api/([^/]+)/([^/]+)/?$", "dest": "/vercel/api/$1/$2/handler.py" }
-  ]
+	"crons":    [],
+	"github":   {
+		"enabled": false
+	},
+	"build": {
+		"env": {
+		"PYTHONDONTWRITEBYTECODE": "1"
+		}
+	},
+	"builds":   [		
+		{
+      	"src": "vercel/api/brand-sentiment/handler.py",
+		"use": "@vercel/python",
+		"config": {
+			"includeFiles": [
+			"_app/**",
+			"_helper/**",
+			"vercel/api/brand-sentiment/pipeline.py",
+			"vercel/api/brand-sentiment/requirements.txt"
+			]
+		}
+		},
+		{
+			"src": "vercel/api/*/handler.py",
+			"use": "@vercel/python",
+			"config": {
+				"includeFiles": ["_app/**", "_helper/**"]
+			}
+		},
+		{
+			"src": "vercel/api/generate-copy/facebook/handler.py",
+			"use": "@vercel/python",
+			"config": {
+				"includeFiles": ["_app/**", "_helper/**", "vercel/api/generate-copy/resources/templates/template_ad_copy.xlsx, vercel/api/generate-copy/resources/image/8ms.png"]
+			}
+		},
+		{
+			"src": "vercel/api/generate-copy/google/handler.py",
+			"use": "@vercel/python",
+			"config": {
+				"includeFiles": ["_app/**", "_helper/**", "vercel/api/generate-copy/resources/templates/template_ad_copy.xlsx, vercel/api/generate-copy/resources/image/8ms.png"]
+			}
+		},
+		{
+			"src": "vercel/api/generate-copy/seo/handler.py",
+			"use": "@vercel/python",
+			"config": {
+				"includeFiles": ["_app/**", "_helper/**", "vercel/api/generate-copy/resources/templates/template_seo.xlsx, vercel/api/generate-copy/resources/image/8ms.png"]
+			}
+		}
+	],
+	"routes": [
+		{
+			"src": "/api/([^/]+)/?$",
+			"dest": "/vercel/api/$1/handler.py"
+		},
+		{
+			"src": "/api/([^/]+)/([^/]+)/?$",
+			"dest": "/vercel/api/$1/$2/handler.py"
+		}
+	],
+	"public":   false,
+	"regions":  [
+		"lhr1"
+	],
+	"version":  2
 }
